--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "mongoose": "^6.1.4",
+    "mongoose-unique-validator": "^3.0.0",
     "telegraf": "^4.3.0"
   },
   "devDependencies": {
